# lib3rdparty

libjpeg/: CMakeLists.txt  dist.info
libraw/: CMakeLists.txt
libraw/cmake/modules/: FindLCMS2.cmake
libtiff/: CMakeLists.txt  dist.info
libtiff/libtiff/: tif_config.h.cmake.in
